K8sdeploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-orano-svc
spec:
  type: NodePort
  selector:
    app: nginx_orano
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
